@@ -12,6 +12,8 @@ Version 5.0
 - Atomic files now only accept the `w` mode.
 - Change the usage part of help output for very long commands to wrap
   their arguments onto the next line, indented by 4 spaces.
+- Fix a bug where return code and error messages were incorrect when
+  using ``CliRunner``.
 
 Version 4.1
 -----------
